store1/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store1-ingress
  namespace: store1
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-dns-cloudflare"
spec:
  tls:
    - hosts:
        - store1.shopikool.store
        - admin.store1.shopikool.store
      secretName: store1-tls
  rules:
    - host: store1.shopikool.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: store1-frontend
                port:
                  number: 80
    - host: admin.store1.shopikool.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: store1-backend
                port:
                  number: 80
